home: Fix footer stuck under TabBar

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,10 @@
 .home {
+  display: flex;
+  flex-direction: column;
+  display: flow-root;
+}
+
+.home > *:last-child {
   padding-bottom: 6em;
 }
 
